# AIPI561BookRUST

./: README.md  requirements.txt
backend/: Dockerfile  app.py  requirements.txt  test_bart_summ.py
backend/bart_openai/: Cargo.toml  Dockerfile
backend/bart_openai/src/: api_client.rs  main.rs  models.rs  pdf_utils.rs  summarizer.rs
backend/bart_summarizer/: Dockerfile  app.py  requirements.txt  test_bart_fastAPI.py
