[package]
name = "bart_openai"
version = "0.1.0"
edition = "2021"

[dependencies]
pdf = "0.9.0"
datasize = "0.2.13"
regex = "1"
lopdf = { version = "0.30.0", features = ["pom", "pom_parser"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
onnxruntime = "0.0.14" # Check for the latest version
ndarray = "0.15"
warp = "0.3" # Or the latest version